[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-gdt-ipn"
description = "Gamma-ray Data Tools: IPN Gamma-ray Localization Toolkit"
readme = "PYPI-README.rst"
license = "Apache-2.0"
license-files = ["license.txt"]
authors = [
    { name = "Corinne Fletcher"},
    { name = "Rachel Hamburg"},
    { name = "Adam Goldstein"},
    { name = "Peter Veres"},
    { name = "Michelle Hui"},
    { name = "Dmitry Svinkin"},
    { email = "STI-Software@usra.edu" }
]
keywords = ['astronomy', 'gammaray', 'gamma-ray', 'usra']
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries",
]
dynamic = ["version"]

requires-python = ">=3.11"
dependencies = [
    'astro-gdt>=2.2.0',
    'astro-gdt-fermi>=2.2.0',
    "notebook>=7.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "gdt.ipn.__version__" }
